# game-of-life-backend

./: .gitignore  Cargo.toml  Dockerfile  Dockerfile-dev
bruno-api/: bruno.json  ping.bru  reset db.bru
bruno-api/character/: character list.bru  character.bru  create character.bru  delete character.bru  update character.bru
bruno-api/skill/: character skill list.bru  create character skill.bru  delete skill.bru  skill list.bru  skill.bru  update skill.bru
bruno-api/task/: create skill task.bru  delete task.bru  skill task list.bru  task list.bru  update task.bru
src/: api.rs  db.rs  main.rs  model.rs  util.rs
src/api/: character.rs  skill.rs  task.rs
src/db/: character.rs  skill.rs  task.rs
src/model/: character.rs  skill.rs  task.rs
