[package]
name = "backend"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
actix-cors = "0.7.0"
actix-web = "4.8.0"
derive_more = { version = "1.0.0", features = ["display", "error"] }
env_logger = "0.11.5"
futures = "0.3.30"
r2d2 = "0.8.10"
r2d2_sqlite = "0.25.0"
rusqlite = "0.32.1"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.122"
